@@ -382,6 +382,9 @@ Bug Fixes
 * LUCENE-6124: Fix double-close() problems in codec and store APIs.
   (Robert Muir)
   
+* LUCENE-6152: Fix double close problems in OutputStreamIndexOutput.
+  (Uwe Schindler)
+  
 Documentation
 
 * LUCENE-5392: Add/improve analysis package documentation to reflect
